responsive laptop frame

--- a/_source/less/_settings.less
+++ b/_source/less/_settings.less
@@ -16,7 +16,7 @@
 @break-mid-rem: unit(@break-mid/@base,rem);
 
 //paths
-@img_path: 'images/img/';
+@img_path: 'images/css/';
 @font_path: 'fonts/';
 
 //colours
