--- a/_source/less/roodesign.less
+++ b/_source/less/roodesign.less
@@ -15,6 +15,7 @@
 @import 'components/quote';
 @import 'components/meta';
 @import 'components/hero';
+@import 'components/frame';
 
 //modules
 @import 'modules/navigation';
