--- a/_source/less/components/frame.less
+++ b/_source/less/components/frame.less
@@ -6,7 +6,6 @@
 
   &--laptop {
     padding: 6%;
-    background-color: red;
     background-image: 
       url('@{img_path}laptop-top.png'),
       url('@{img_path}laptop-bottom.png'),
@@ -42,4 +41,53 @@
     }
 
   }
+
+  &--phones {
+    background-image: url('@{img_path}phone-middle.png');
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: 100% 75%;
+    padding: 4%;
+  }
+
+  &--phone {
+    padding: 4%;
+    background-image: 
+      url('@{img_path}phone-top.png'),
+      url('@{img_path}phone-bottom.png'),
+      url('@{img_path}phone-middle.png');
+    background-position:
+      0 0,
+      0 100%,
+      50% 50%;
+    background-size:
+      100% auto,
+      100% auto,
+      100% 70%;
+    background-repeat: 
+      no-repeat,
+      no-repeat,
+      no-repeat;
+    > img {
+      box-sizing: border-box;
+      border: 3px solid #222;
+      border-radius: 5%;
+      overflow: hidden;
+    }
+
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-image: url('@{img_path}phone-notch.png');
+      background-position: 0 0;
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+  }
+
 }
