--- a/_source/test.njk
+++ b/_source/test.njk
@@ -3,11 +3,14 @@ title: Test
 layout: default.njk
 ---
 {% import "./_includes/components.njk" as c %}
-<div class="grid grid--fat-thin">
+<div class="grid grid--full bleed--start bleed--end">
   <figure class="figure figure--screenshots">
     <div class="figure__images">
+      <div class="frame frame--phone">
+        <img src="http://placekitten.com/414/896"/>
+      </div>
       <div class="frame frame--laptop">
-        <img src="http://placekitten.com/1024/768"/>
+        <img src="http://placekitten.com/2048/1536"/>
       </div>
     </div>
   </figure>
