--- a/_source/less/roodesign.less
+++ b/_source/less/roodesign.less
@@ -16,6 +16,7 @@
 @import 'components/meta';
 @import 'components/hero';
 @import 'components/frame';
+@import 'components/screenshots';
 
 //modules
 @import 'modules/navigation';
