--- a/_source/less/components/screenshots.less
+++ b/_source/less/components/screenshots.less
@@ -69,7 +69,7 @@
     });
   }
 
-  .break-mid({
+  .break-min({
     .screenshot--phone {
       margin-right: @gap-rem * -1;
       margin-right: calc(-1 * var(--gap));
