--- a/_source/less/_settings.less
+++ b/_source/less/_settings.less
@@ -6,6 +6,9 @@
 @gap: 20;
 @gap-rem: unit(@gap/@base,rem);
 
+//space limit (how many spacing util classes to build)
+@space-limit: 5;
+
 //site sizing:
 @site-width: 1200;
 @break-max-rem: unit(@site-width/@base,rem);
