--- a/_source/case-studies/onalytica.njk
+++ b/_source/case-studies/onalytica.njk
@@ -115,7 +115,7 @@ All the components compose together, so the pattern library can also be used to 
       ) }}
   </div>
 </section>
-<section class="container space--grande container--decoration-highlight" id="Outcomes">
+<section class="container space--grande container--decoration-highlight" id="outcomes">
   <div class="grid">
     <h2 class="marker marker--number space--pico"><a href="#outcomes">Outcomes</a></h2>
   </div>
