--- a/_source/less/_typography.less
+++ b/_source/less/_typography.less
@@ -248,8 +248,8 @@ body {
     }
 
     //lists {
-    ul li {list-style-image: url('img/bullet.svg');}
-    ul li li {list-style-image: url('img/bullet-level-2.svg');}
+    ul li {list-style-image: url('@{img_path}bullet.svg');}
+    ul li li {list-style-image: url('@{img_path}bullet-level-2.svg');}
     ul li li li {list-style: square;}
 
     ol li li {list-style-type: lower-alpha;}
