--- a/_source/less/roodesign.less
+++ b/_source/less/roodesign.less
@@ -64,3 +64,13 @@ body {
     outline: 1px solid green;
   }
 }
+
+//homepage styles
+.homepage-hero {
+  max-width: unit(400/@base,rem);
+  justify-self: center;
+  .break-mid({
+    margin-top: unit(-100/@base,rem);
+    z-index: -1;
+  });
+}
